# Homomorphic-Encryption-on-GPU

./: .gitignore  CMakeLists.txt  NTT.cpp  README.md  a.out  ckks.cpp  ckks.h  ckkstest.cu  cufft.cu  encode.py  encoder.cpp  encoder.cuh  encoder.h  encoder.py  encryptor.cuh  evaluator.cuh  ffttest.cu  genprame.sage  helper.cuh  ntt.cpp  ntt.cu  ntt.py  ntt_60bit.cuh  parameter.cuh  performance.cu  polycalc.cuh  polytest.sage  polytest.sage.py  random.cuh  rns.cpp  rns.cu  rns.cuh  sealtest.py  t.sage  test.cpp  test.py  test1.py  typedf.h  uint128.cuh
